setup/k8s/video-server/videoserver-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videoserver
  namespace: video-server
spec:
  type: NodePort 
  selector:
    app: videoserver
  ports:
  - port: 4000
    targetPort: 4000
    nodePort: 31400
