setup/k8s/video-server/videoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videoserver-ingress
  namespace: video-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.dev.video-server.iudx.io
    secretName: api-dev-video-server-iudx-io-tls
  rules:
    - host: api.dev.video-server.iudx.io
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: videoserver
              port:
                number: 4000
